--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
@@ -31,10 +31,13 @@
                                 <rect key="frame" x="0.0" y="0.0" width="703" height="704"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="bjq-ff-fyb">
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="Vv6-xn-Xr5">
                                     <rect key="frame" x="0.0" y="0.0" width="703" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="4" id="xnm-Gg-iEQ"/>
+                                    </connections>
                                 </searchBar>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DetailCell" textLabel="g3B-qI-fKe" style="IBUITableViewCellStyleDefault" id="sI9-Qm-UCk">
@@ -70,8 +73,18 @@
                     <navigationItem key="navigationItem" title="Detail" id="53"/>
                     <connections>
                         <outlet property="detailTableView" destination="xyv-bC-cSz" id="bX2-y7-PzB"/>
+                        <outlet property="searchDisplayController" destination="4Ew-lo-hkL" id="vZj-QW-y0p"/>
                     </connections>
                 </viewController>
+                <searchDisplayController id="4Ew-lo-hkL">
+                    <connections>
+                        <outlet property="delegate" destination="4" id="55U-Cg-p6d"/>
+                        <outlet property="searchBar" destination="Vv6-xn-Xr5" id="kRF-lv-gUP"/>
+                        <outlet property="searchContentsController" destination="4" id="R0Q-dK-snD"/>
+                        <outlet property="searchResultsDataSource" destination="4" id="zYX-do-gM2"/>
+                        <outlet property="searchResultsDelegate" destination="4" id="RRw-xE-0hY"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="448" y="248"/>
         </scene>
