--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPhone.storyboard
@@ -75,10 +75,13 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="Nrk-ia-c2X">
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="xnL-Hz-tST">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="21" id="0LS-YR-NFi"/>
+                                    </connections>
                                 </searchBar>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DetailCell" textLabel="9mQ-xG-CEM" style="IBUITableViewCellStyleDefault" id="of6-vx-s1l">
@@ -111,8 +114,18 @@
                     <navigationItem key="navigationItem" title="Detail" id="26"/>
                     <connections>
                         <outlet property="detailTableView" destination="2SG-E6-631" id="bPT-HN-sOg"/>
+                        <outlet property="searchDisplayController" destination="EKB-EG-Nfe" id="lnJ-hQ-7Me"/>
                     </connections>
                 </viewController>
+                <searchDisplayController id="EKB-EG-Nfe">
+                    <connections>
+                        <outlet property="delegate" destination="21" id="656-26-wyj"/>
+                        <outlet property="searchBar" destination="xnL-Hz-tST" id="3PU-gk-7BV"/>
+                        <outlet property="searchContentsController" destination="21" id="B2P-sH-XL7"/>
+                        <outlet property="searchResultsDataSource" destination="21" id="UGN-93-Oe6"/>
+                        <outlet property="searchResultsDelegate" destination="21" id="DUa-8v-3q4"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="902" y="64"/>
         </scene>
